welcome.lessons.welcome.array.array123.Array123.scala.error
array123:4: error: type mismatch;
 found   : Int
 required: Boolean
		{if (nums(i) == 1 && nums(i+1)==2 && nums(i+2))
                                                         ^